# Interview_Preparation

./: Advanced_C++_Interview_Questions.txt  Amazon_Coding_Problem_List.xlsx  Amazon_List_Of_Common_LiveCoding_Problems.txt  Amazon_LiveCoding.txt  Amazon_LiveCoding_3.txt  Amazon_LiveCoding_Interview.txt  Amazon_System_Design_Interview.txt  Common_Interview_Questions.txt  CoverLetter_Template.txt  Feature_on_C++_by_version.txt  IntroductionInterviewQuestions.md  MetaData.txt  Readme.md  SmartClip_CodingTest.txt  Target_Job.md  TipsFromChiara.txt  mail.txt  temp.txt  temp2.txt
03_SystemDesign_Resources/: System_Design_NoteBook.md
C++STL/: CoverLetter_Template.txt  SomeRandomTest.cpp  customPriorityQueue.cpp  emplace_back.cpp  mapTest.cpp  multiset_tutorial.cpp  practice.cpp  regexPractice.cpp  ruleOfFive.cpp
Job_Interview_Process/360T/Message_Game/: CMakeLists.txt  Readme.md
Job_Interview_Process/360T/Message_Game/include/: common.h  global.h  player.h
Job_Interview_Process/360T/Message_Game/src/: main.cpp  player.cpp
Learning_By_Coding/: dependencyInversion.cpp  liskovSubstitution.cpp  test.cpp  test.txt
Practice_Problems/: 3SumClosest.cpp  CapacityToShipPackage.cpp  ClimbingStars.cpp  CopyLinkList.cpp  CountingBitsInNumber_Optimized.cpp  KthSmallest_SortedMatrix.cpp  Largest_Rectangle_In_Histogram.cpp  Least_Unique_Integers_after_K_Removal.cpp  LongestIncreasingSubsequence.cpp  Longestfactor_UVU_GivenString.cpp  MaximumTotal_Important_Road.cpp  MultiplyString.cpp  PathSum2.cpp  Producer_Consumer_Model.cpp  Reorganize_String.cpp  RotateImage.cpp  UniqueBST2.cpp  (+19 more)
(+92 files in other folders)
